--- a/main.css
+++ b/main.css
@@ -114,8 +114,21 @@ button:hover {
     width: 120vh;
     height: auto;
     background-color: azure;
+  
 }
 .expenseslist h3{
     padding: 5px;
 
+}
+
+.expenseslist tr{
+    display: flex;
+    justify-content: space-between;
+    width: 120vh;  
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+.expenseslist td{
+    
 }
