--- a/main.css
+++ b/main.css
@@ -103,9 +103,12 @@ button:hover {
 
 }
 
-.totalbudget, .expensive, .balance{
-
-
+.mainunder p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    flex-direction: column;
 }
 
 .expenseslist{
